--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -56,12 +56,9 @@
             <div class="d-grid">
               <button
                 type="submit"
-                class="btn btn-primary"
-                [disabled]="isLoading">
-                <span *ngIf="isLoading" class="spinner-border spinner-border-sm me-2"></span>
-                <i *ngIf="!isLoading" class="bi bi-box-arrow-in-right me-2"></i>
-                <span *ngIf="isLoading" i18n="Login submitting">Iniciando sesión...</span>
-                <span *ngIf="!isLoading" i18n="Login submit button">Ingresar</span>
+                class="btn btn-primary">
+                <i class="bi bi-box-arrow-in-right me-2"></i>
+                <span i18n="Login submit button">Ingresar</span>
               </button>
             </div>
           </form>
